fixed wrong size for drag handles

--- a/webpackage/stylesheets/admin/_drag_handle.scss
+++ b/webpackage/stylesheets/admin/_drag_handle.scss
@@ -1,7 +1,7 @@
 // From: https://codepen.io/zachariab/pen/gOZwPZ
 .drag-handle {
   content: '....';
-  width: 10px;
+  width: 15px;
   height: 20px;
   display: inline-block;
   overflow: hidden;
